--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <h3 class="hello">Hello, my name is <span class="name">Jash Lodhari</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">web designer</span></h3>
                             <p>I'm a android developer and i love to develop next generation products. My expertise is to create a good user experience and mobile friendly websites and application.</p>
-                            <a href="images/CV.pdf" download class="btn">Download CV</a>
+                            <a href="images/CV 2.pdf" download class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="images/my.jpeg" alt="">
