--- a/index.html
+++ b/index.html
@@ -311,6 +311,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="work-item padd-15">
+                            <div class="work-item-inner shadow-dark">
+                                <div class="work-img">
+                                    <a href="https://github.com/JashLodhari/Book-Searching-App" target="_blank">
+                                        <img src="images/work - 4.png" height="225">
+                                    </a>
+                                    <h3>Book Searching App</h3>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
